tests/requests/invalid/021.py
from gunicorn.config import Config
from gunicorn.ghttp.errors import InvalidHeader

cfg = Config()
request = InvalidHeader
